change cloudflare zone

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,39 +1,40 @@
-#ENC[AES256_GCM,data:IJNvQXbbHWtjEq8XOqXsRDxCFpHZsFTunvcMAkVDEHdr0Yc9sbqnlUvwvt4FgXPJ9X6gkU4M1cQw2dMRFxNF9FA=,iv:XLM5PDmMuPT/QpsXKLtJD2jx4QMAOAZWh0/7Ij6tm94=,tag:Tan5ui+LKV/azJwjxOa/vw==,type:comment]
-#ENC[AES256_GCM,data:0RSgErEW3N5ijBEMPKYgYBO2cR6rJ8QqXliE4F3XsF1TKJKR0keEa+DgstU=,iv:VelD5xNNl/BHE+nZFPfy5JQwIDWW9nuh96rmjZECbLI=,tag:DTOhN0EEy3p1rmozpNVpxg==,type:comment]
-VIP: ENC[AES256_GCM,data:0D5uHARubsFYasUAZQ==,iv:EC6Ox8jA6ob2zfIVO2kON7/dGki0/351jRU+OkWxtFI=,tag:gDqDYgCJvdskvRrpuYhuEw==,type:str]
-#ENC[AES256_GCM,data:d3ryJFW/GJ3bjf+ONM5dqe8ooDO9rI+UisYR,iv:WsDFYCEd3YXuBD3MVzmVvDyAAqLkKa0YA1/4FErIqVU=,tag:esz4p+JdGif6i1oFYIztyw==,type:comment]
-#ENC[AES256_GCM,data:JZ48hgdiZPbSrFlm+saf6dXQEMhLHgtgFpyJmadPsSs6XBkp30hbzPfulEU/enKWsc+uySwexKm6IjTFbWDPf5hbGIvZvV1qLOeE6Moa75o44vkGSN9zAgk=,iv:sDhterbLx7+EdsM4oF0Q6uwXp3sg90DLJKqIWh9kCsk=,tag:zHX1mODLqw2IMXAzwl5AFA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:jkmPI0/pRYPNN3wAf6s=,iv:piINoAiUf5iOkVObJn8lP9V377OKMpAui7Iqi1eg/EY=,tag:uljsMkixbFtU5htl4LkljQ==,type:str]
-#ENC[AES256_GCM,data:AL7ApoCEGMP22lkmlCvSu77BTtrhgaEjIMrQy6Izc2d7/A==,iv:LWgWhekS0ZX1U5rNUhRLrBPv7W+h06yyudwr99nGzhY=,tag:sjpQVGRB5a617PY/OMpeCQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:65QL9H3gICwYTcxOYg==,iv:1DsTbkN8J3aGElujZ5LOV6M/35OVFqY9RQRXU2x9fwg=,tag:tfcnAo16PAO+AP9a/ac4Hw==,type:str]
-#ENC[AES256_GCM,data:FVFyftyyn8fPj2OZsKGjhwyolSLc1qNIpoujX1aGoLEZEsasm97K6eY35q2t2rE=,iv:XOuBLnkZnI6PQvjRAq9AYj1vopz565LknT+Y0SpzC0o=,tag:aR7VTsGB+zT2aGATSfGG+A==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:DMuePQ5dSfwsD+mFw9E9ZbX44SVO7F2JP5+gj1Mmgg==,iv:+5IzARxF7kqkIdtWiEvu/BSBKzMMAbgGOLe/raNWihQ=,tag:sTDZWccf9skrKaRNinE9Bw==,type:str]
-#ENC[AES256_GCM,data:oVvng6GFugaQpHIJ5t2bIes6ChRR6xSbelzhs6Lp12+Kxb04dzY6rLwtr5uN7UAQpu4vMZ3RSHcqJ6OP67iarIe0wKdCdg8PswPTSopfIQ2j0A==,iv:JbAKn792XQhMsn5aOOKLnOOhp1CYdGUg+99UZnLqAy4=,tag:O6US8Bc/kM9DsnncxGvvzw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:geqvDzkWxYsbMaAkeE3m,iv:rBSg74dMlCWqnOfifo4kIiWEn4+wunSs1Uvdqkgc+O4=,tag:QCbjF+ec2dJ0SWUN49lUow==,type:str]
-#ENC[AES256_GCM,data:FnUbASDy5QGjQ3MWjIRE8/SXFdAmStSlAulzIXqJE6fX,iv:D9OzhH5I8x5t5mUKUK2abTrO1CZ3HRVXxaHYwJCgGy8=,tag:UHcXNzBH0UyT0/CArwnwSg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:2IqXmBm7H/J5bgTPBy9K,iv:kWGpJElBZOGSVgrsP0Ae2GHwuFOTXcXg4hDjTBwSZAo=,tag:52EVRlYofndxtX8V1gpHYg==,type:str]
-#ENC[AES256_GCM,data:mFs+nUiftX7hEOKgEizXl3xsL8BjKfGPZu7Twgtg60pXhTjD1ZPfBk+fYOnTFxBZjbJgDGcqwaA77fq5TF15mz7ndWR9sjWDvtI733L2gaY=,iv:lhPU4hyyR+pes2dCzeQMRexsioGBY+wEBvmaq6B5XIA=,tag:9AoiKQrup2ozgRj+j2/FXA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:wj6dl99YkPFP67d26L4a,iv:RzvTky2DcvG0gzxuImVYNadixlUjITUgI5QNUlMUe9M=,tag:OHKIFkJnzr2J3H+wVzrJaA==,type:str]
-#ENC[AES256_GCM,data:xWnhxpYNdZOOsfM6jJlGZAskhH0GN1q3doQslmdFXjSEpKoAVME0X2Pq2+voc/CaZHRqlTQ0fvmLUgwkh2B64+JiHoWLrZx669AQNkB5V8n1tLfg4FVP,iv:JM2iPSBpm7TEb4zEVzsVJ1ZTR0gcJb5pf6EZyKiX6O0=,tag:RN3YbEZKue+00RV/mPE5Gw==,type:comment]
-#ENC[AES256_GCM,data:7StQ8PvI7lbyEJIi8MhFWyWBGUKkuxaESZzcXyd5qSJo96tO7FaYOuhPu+Tg7kiU4ZT4v9wBsQ3K0oBifNfToxqovFUCY10fzH41Ln2su7hIW8+iN2PoCd4gamJERYNyVM3WadECFWyXTZmavUhwX6WeDta/B70r4id0+w==,iv:71XtjWmyYNg8xyxt1UMdUpNuSBUEdgM90J5ckEtC3ts=,tag:/NZWijU11mBc0FYXHahWtw==,type:comment]
-#ENC[AES256_GCM,data:58DTdEbJwluy+CwABHPbHCEbM3rJdBVik8FHRtYto8JmK+zmTmYKc43MQqbjsClxwbz48K6XcLcohOAKgWnMo9d73oU/tgzykW483A56m/4=,iv:EzgMWoyi0A/ZtbDcqJB38BCFEM7mJVam5kLCQ2R6QAc=,tag:eCrb1Qyl5UKD6s/nXyoALQ==,type:comment]
-#ENC[AES256_GCM,data:/Y5JauEl+Ng8x+r6V1lEngtaQ7CjubxV4Raoeb7kDh4Fu/H0mh6mygnMRwnp/SUAeYqbZHaB,iv:CdKI7WpSgWBw+e/tGG6qkcxYxfjNBkc6tE+cSBn7TDY=,tag:muUADigaBssch4bXIprw4w==,type:comment]
-DDNS_URL: ENC[AES256_GCM,data:ID5nusU4x5KU9fjmn1A=,iv:JAQwbmTcBZdehdwrz5/wra+OOcP56iBd2MM1I/ncqZg=,tag:Qnv3mlwYSPA3TKQQZP5vfA==,type:str]
-DOMAIN_0: ENC[AES256_GCM,data:4QEeZriAaCf9bbFj,iv:DhifeaufYhipiV9GTle6HSs3lmqzOVAUEqfkLyW53NQ=,tag:ZAPXJLp5AlKXcSkazAYViQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:jFrVwHMYLB2rWuzxA/28l/A=,iv:itdZiOE358/I6nCBYcv/s11xbBjhoSMylPI0oqmFGfM=,tag:s4siSzA5Q+1dvJ6oHCbjIQ==,type:str]
-#ENC[AES256_GCM,data:uIfNbXUdp+rLWsTIu9pNY702jVn+PJCaz4lk7KK6wVPNt2sZCcr3MKnjafFZVzltqvAmKVcFw9rRJi3pH/7IyzrCZA==,iv:VKroOZNlMoQl+xy3xeuZBUSz/H3Qj62jM19/b5PNHAE=,tag:w5mklJ0stb6Y7mFCXUqsxw==,type:comment]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:uyPKSTB4YjQugTcvV8VphX51lM+UYgr2SR56oLuS7bD3T4Xu+w==,iv:M7BPwUPcvEmdHole9aIH19YDGCVWfS3qn7kA8nVMTPQ=,tag:aYio8fvp39QFsdRl+KKrcQ==,type:str]
-#ENC[AES256_GCM,data:4iy7BAb2WSM1cNYP8BqPnrDQ/kqIZrLJC0UV/IuGTx+GJc4xO4pGnXrKqZVMO+iND7YC090fJkc=,iv:BvW48G4KFhuQYfRekC4k0SxnXW8uenQlzAecHnScL0o=,tag:TWpR4UJ7h2U0wyA/oxPTCw==,type:comment]
-#ENC[AES256_GCM,data:pnhiOALYZtxu9ZPeyvxcAIduS27yfkrgWw==,iv:CK+4/7VEIZbjsuL52gClPXRtp9kL+xQQs90FdUIsn+o=,tag:ybWKdk+x7qZK3UzQAi1V1A==,type:comment]
-#ENC[AES256_GCM,data:bB79ZvwStgP5ihowqa88+BuWDWM11R/Vfr+iU8qqtHNXIDYcamJiHWaB8Jh33eHrNooZlMDz4Al0PWmRMWfclr+oYKIYAsK48CjcRX4=,iv:2UJodVxbCrudLwVvXYZHCVNWJfvNjDTPIYvVK6l0BOI=,tag:+6tmMZprEyqn7H1djQ6dBQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:3QfqO+as6nPXROYKlYpKBcFxd31cCUhEtJAmWmQqvBSHwVs8FfoBJcB1s61PYOir,iv:z31pwMdCMF2U+MSZl3TyyOxZCEHfUzS9lBff+ycmB+k=,tag:wlmCBBjepU5YvZtV9nDr5w==,type:str]
-#ENC[AES256_GCM,data:P3NvcD8cteoAG5XCBU7Gu+mW0rRJ2c0946b74bg54dhbLuuasxVL8Kr+dPQXFO5PEwjqw+mfEyFYjLAQgnr9ON1I6poRXCo=,iv:bYky2b+ktg2xxp1VKHMhUGTr7azabBb9ZQ0wNTpoM5Q=,tag:0CcMBJ1sEFsUh6/Gn/OjFQ==,type:comment]
-#ENC[AES256_GCM,data:fTT7gu8gwUDPvqBr2Q7T9BO0xqZ0NZxGQPRd3+o3Y2Ih2dV5qVJvR2a0QIox1Gb1DuluQHZD,iv:i/NtmxBTGdZOrUIXXy7SsWfAy5nJAsvIlgWcB8Z6DoQ=,tag:7hQj4Lk6/ayLvmiH6XHwVg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:ZCIV8xvurA==,iv:vNM0N+s4lggS5OgfLWmoxEfLqnf5Mti7gFT1WuG2DE8=,tag:xYuyCITwAaR4srJNRWXf1w==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:3xkepF5AV7V6T1lJ1VJVMxgAetI=,iv:zE/DtDVH4FDEAw+enFHtTXzpff3vZEp8P6u4+Dz5Tg8=,tag:E5y1wyubEeaMINDZIirI6w==,type:str]
-#ENC[AES256_GCM,data:d/AL9sUeyKG+Ef+0nC0=,iv:TSjVw0ae9cbM7WmOs711/cx+JhP6GxZUxW5uWLn1vSk=,tag:lqUkcmkkQFAxXpQUEgB2kg==,type:comment]
-PODNET: ENC[AES256_GCM,data:xkIgHQWe9BTOA1C58w==,iv:OgSyWeL0mkMoXPKXV9drhJQ9VKL1zaTefUk4B2Rzpe4=,tag:vT5uaCOpS09ijH746I3Lwg==,type:str]
-SVCNET: ENC[AES256_GCM,data:cLygw6ijJ2Df+uoydw==,iv:gZAQh31TX+1m+jnwJt/Fui0I6PK3EgYtM6Vuzw2dBu4=,tag:FuSC6VMdFGfrCa4d92gd2A==,type:str]
+#ENC[AES256_GCM,data:ezWodqAgvVOlRW+DGx70uEEawtmszYG5BVKfCj7lVMUGYDJ17lBZr74GV9svlFkOxTSPP1AojKmz64XTjNPOI+o=,iv:iRl1NNa6eYLARXWn+BQHzNR6yJkSnL5Lq+ZTJeIwcOA=,tag:7906vhWSq1Uxf2AtkuteuQ==,type:comment]
+#ENC[AES256_GCM,data:7B9IQZDcOATbeFE4nFkaUfQ/W+7G5fIKhyhhupEv6fAj1AaBmWeQW3Qg31E=,iv:E+lnMPLKhdxR2MTMhMlQgkkUlwLzh9/Hlya/YtPViaw=,tag:HWrLlDjDCyuZyAwep9F0Og==,type:comment]
+VIP: ENC[AES256_GCM,data:xPSRMBcPnC3Li5QbFg==,iv:4dBmJlc1Sw9SRtKZ96Eqgr79k1404RbKm8i7kIIw3zc=,tag:rvhd7yKdpspqmUjlrhIrxQ==,type:str]
+#ENC[AES256_GCM,data:nCTb3wa3A0khFemvG/8h4DOJuaQg3PqNwMIS,iv:RNLWk6FbKgbhxeVjIC2hYEnLKX+KEz1YgwfYPYxtJvE=,tag:Ij5LCuvbQjq8ESFApztQqg==,type:comment]
+#ENC[AES256_GCM,data:QetfNr/AKCINck4MfP0RcIVgUCuwjBou/l1BvpUBTqi7U/HXgEDdLpl6UFryg0olKmZxEyYz53TaPkXU/kxEkV8ri+jA+F4Qs/ZLiez74ZCdXriPFq+EK2U=,iv:XZVKxV8j8ixaCD6sPURZiUKLOVCLUCW+p7aFjq05GPY=,tag:VC3VJYsa94akC50gXC39ag==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:04gxhzTZ2ekzNXKaLg4=,iv:wvw0XyotGrfpDaDZFAksTZVL/1k3jGj2yUOuEnj8czI=,tag:1U0ym/qF79Ewtt4nruMBoA==,type:str]
+#ENC[AES256_GCM,data:XN9bnjU6ngdCFCfNIbu8u36FP3Fs3I4B+wFi5aQxj5ZTng==,iv:PCJ+Fqsj4gLVdVDF0ez1f/Z7SDERPFiqOXPXVqUkM0I=,tag:MvqCV4cmoTdi5Pj+CiReqg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:vLdmrOll3klstZjYnA==,iv:gAoE/D5fqbemq1ct/yyVzUfx1ph4c23LGZzjt008CUY=,tag:yc9HjzTa047AH275hpjCGQ==,type:str]
+#ENC[AES256_GCM,data:qSPOYUYByME/w4YZO7BVxdvRKrjt85Hh8z0/aTlXyK91DA3nxxnmg1XE00I51Is=,iv:CYcWBO4Q3LFp4UHsAcsJGEURXcDIwSIorKNRF9HEjms=,tag:+kwOnerl2QqI8qXz/qYaLQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:BczG6k4fRTSnOMaUwY68e1/cdEfr683+xpi0uv3pxw==,iv:RkGd/MTAOFFpz9SzvbQb6QtzWeBjnQblxqkZzZRo8U4=,tag:I9teU4qXka33BUc56iltvQ==,type:str]
+#ENC[AES256_GCM,data:nn94ebWNReO5573tUbRxkse7OYArz0r6sr2A1Igfkn8pdIitv/RuY9z2bMRuQiDjdX8tpdN3w52IGlppjN22VsHmEwRKUsy4/55niM2hygpe2Q==,iv:wJ7e4c2Kq1sy3Kb9Ql0a8vEZYtMSwX67/pxSGKJBGIc=,tag:SOPNliqRoXaWAfCdyFcW/A==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:WFOk44hVhz1BV7NWiENd,iv:Secu+PiJyOw3kFGQ7IYjqqQ6dwday6GhdXlNUgBQL9M=,tag:fsG9Y4NBhLPkD0ywgD6wqA==,type:str]
+#ENC[AES256_GCM,data:bsWRwaGCAxp50wCpe48e/9oNylZ3iE5wIvibxRFcUdXt,iv:Nim0CtgfXtIUdZMmTS3n192tWexKnfz/8Hu37u/iUVY=,tag:zYOU1MUr6ZRxBbZWUa0TMQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:SxnXjJt21mIycIT4d9zN,iv:tTtoyEk7N4+T/MiLsJdiNPYZSinVUr9/gAmGXt5dgJg=,tag:UDmFCMg9/u7pSjfmTgfIfg==,type:str]
+#ENC[AES256_GCM,data:9hi0+0eDRjGibvMiSrqRY9IH8Bwmlw7hnY4iLKnfFzxVIgUsSI3kmyCGYhf5dvE04vr9zUVapmjE0vRenruYfvE6WByzupGCeackYyNEvIM=,iv:z7AA2Rmva1YD+KS13FArXtP3VqcO/s+MSXthboDomxE=,tag:lbfLyydU1bBCyn/DrQT6DQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:RtdPd03odlur2+kN+6RQ,iv:NC5A0HJaFdGcKZektoqh4Ez2c6KSoxqCK0J/rlXhoVo=,tag:OTvBd5FkXklsfMPvGbUWLw==,type:str]
+#ENC[AES256_GCM,data:n+Bcj+j/2NAGolEMvagmBpqETfgUNJ4bPg9qX4PZX1AFSB0bH8ESXbMhmjMyzI6m5Ii9StYW56cM9Ow+Et8LBHO3EShezCKyITb1nmC1fvxPNSW2eLyc,iv:7JlQxz7DJpFlp6fiIPnsnpmAdf8jopatgQfs0hZRqzw=,tag:PedaPGEm5sXObG3LVqk9Pg==,type:comment]
+#ENC[AES256_GCM,data:vzudaEagKXc7fYlSRImS4SHTygjcKSRkTFnTDFOkQaabxPwgEx0SFPIJ9mHenlj/9xqjyogXXMUXxhO/n3XDgxqefU6f/Ql48+uj6OGXWgba8rxrJFRc3Rk/yt/jUuZnaGiZcs/sXCa074i/mr9Q7d4T2eYlHmvLI5bWgw==,iv:a534KbQyw1Pt4ttAqyP+Ozq71H8PG7pHf2uCwV3NtOM=,tag:Uv/3cNDR+6fZenbhWr84Fg==,type:comment]
+#ENC[AES256_GCM,data:gcaGlQsQ5rI9lRrYl2yaMVBURhgLikKrNjwWc2O8ocIsUjwv71cYMeoAqpOd18aaCT3mhEvez+/xSNxJWPMbaKArEBIcF6cTfzmXb7/yJsk=,iv:0+tb1EHmPd+P0uj0GSkY1tIbowmhNwhrL+L2mzYv3v4=,tag:El9eq89Ux214ejFhu5uN4Q==,type:comment]
+#ENC[AES256_GCM,data:Bjis6j5S99+xs20/rDxoEtw16Qa56T9Vel5vbIW903th3APZJZA3Xx2cLkK0EaM7m7uz/k8z,iv:tuX1xvL9qp1sslxAQ3oTacNke4YfCW8lCu68iK9MSeY=,tag:GOt3obpg2Dl/s0D37DKGcg==,type:comment]
+DDNS_URL: ENC[AES256_GCM,data:ANTsUwV0TOa9j7psOOo=,iv:mmmAMRI3CE2bCxAiMmwXUJMM1cAIbUHlmkGtdiUYWGQ=,tag:w4923Hu2ibZtsw9bXVin2w==,type:str]
+DOMAIN_0: ENC[AES256_GCM,data:xBrfgibHzXa5pErU,iv:zcq/hE8rFyBZnq3YPscByrdZhctN625sYr6FNnES3iA=,tag:Hed/2g3iayGBDvaMsQnpJA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:/ZWzaVw+g/a4ZTYz8VlxpvE=,iv:mEBS8rkc+MIjRthYgEXtyVt60/OmcJKg5CyKD/AIe2w=,tag:989/F8G2hZmKLB0cVtt+nw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:DV4YAWYuGFLUbHgA0k1fxZT82Dqjui31+1cJOoOjSnM=,iv:gWugLQ2N83Ht4M/dBmom/y6ctZadP/09WRpJWGm2jo0=,tag:OZI0QTBWOd7kHK6IIZTBEg==,type:str]
+#ENC[AES256_GCM,data:wKyOyr5Eyt+bMq2jv0tOtVPXYrPGXGkC2A2S/tqVEt4aCjShxvk07RNU/0AvB7ELyfwxIxeageVomYvmFqWKljXoRA==,iv:DZWdGnV5e0AYO4x0VBEdnZsZ8ST0SksdFnQDFZSYXIM=,tag:tMOcnXEnE7MFx4gWi+Lnzw==,type:comment]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:fjClLJ/mRK649DCz9hprYfe2EUjkzvB2HPjsxkc86txVTHukMw==,iv:wTSQztOoyo9kmid5ND8b4Tp3sg0+DWrggT/naFKngLs=,tag:1ryIQa66EiAqnpOd/yIzOg==,type:str]
+#ENC[AES256_GCM,data:G4xR6vsxQUSoOI2hgO1Px/jEAEmj/PsfYBaUfrhi7Y8hBmRnOcWsz7lgpFle0e4FALR6BQ30L3o=,iv:SHSXtgL6NExaFTiUyiSd0yugMnCFwOs6tOI2BReeODk=,tag:ACI2bffXWiUOlDUamtLpCA==,type:comment]
+#ENC[AES256_GCM,data:98GA8gmPhq1Ar8yQI72nWGcCC+UIDjlMPg==,iv:VT/u+/gHEGNN/29kfJU31yn5pBr/1Ty4bxvvnQsv2pI=,tag:uvl+/xYWm8C/EJKEmL1EBQ==,type:comment]
+#ENC[AES256_GCM,data:vZbjIePo5OP0aGbJ8XItnstwNNj1WwIpqrU8VmGJhsIahnhUDgnXa8xLiMdDJFmapO0/w4q+EW5sb3iFkhHBgLQkZ3uzAnR/IAZScEc=,iv:tfROTO/gLuwBj3vxt0dRmk6m2Vv+WQGj6mBBiHrrNic=,tag:eEpYW2BQuoZM3ClRT3l2xQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:wJNPLwmtzHmZx2l9E8XI/2dZyLu+b/hPgy82NxBe/LIGp4uOiT3gSzfuvgccLt3e,iv:GzGmqdr8iAEhresaTq33JsMIsyspsqZPjg/5uFE4Nlk=,tag:iYPxqQXo2yVoMWoJ0JpLUA==,type:str]
+#ENC[AES256_GCM,data:zRAtEgCj32vgic5pWPzmoEgvAL1XM4mYo6iZv9QnmPnSWHqam0Op85MdO+UBZNOXlcxLkW9xC6R4dzeYRok3kFaWjIsZH9k=,iv:TZg+DvDhty9ADIIJn8H8T5Cjdz0UaSVNRfC83wPKIy4=,tag:3xJ1sUGCgAKQV1O52DAxVg==,type:comment]
+#ENC[AES256_GCM,data:0z+0Cb1f8pSO/sGLmnFIDl+xYUS7egp9evztZ6hTQyGyXhTwdAy78GfYjqr9qC5JvWMLJfHf,iv:ww+vbCEdzuLtnfA6wvJj2gJloUGO0ZCeZBIeq7OMAd4=,tag:sWfjwBw7JTHYDg6OzuYgQA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:YyScjpV+CA==,iv:iLXpGbJMZOmpeCyAHdkd4KnYq0snotg9pgj4mCHU4Zs=,tag:cSZOnVs49dUs3uzPFEM1BQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:vnRxevYrbLaHqf0/Tm3Ulct02B8=,iv:r5dQgGlSxFRLc3Voa8adw7fF3wDTfBQc8Kec8/iH2hc=,tag:RN+9+QvNRUpORSyDmXbc1g==,type:str]
+#ENC[AES256_GCM,data:w8DKk2V1s4bK1plAfU8=,iv:YPDXz1GcUEVcAcQNQqqIEVwy5X5X4sERzqJJcnJoN+8=,tag:8ML4bkI4FzTo6XQl1Ypupw==,type:comment]
+PODNET: ENC[AES256_GCM,data:t6cxbrQpJM1iRPWaSg==,iv:QeCRvxzC6/uqCuZe6624JlxRejT4+cavG5PbssvYki4=,tag:G5Yh0M+uk7EtKKHGVoLofg==,type:str]
+SVCNET: ENC[AES256_GCM,data:P1j2wBlPWChfYO9LWA==,iv:+YjjeGcbHD+rZ8D5hp6tUIpE/POcVNPwDwqcNpRdDVc=,tag:LjkKOBCtmfQptY0XDkkIBQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -44,13 +45,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwUytpM1ZaN1BSWkVJY0M5
-            K1hXMWNRNzE2a2pBa1pwVWg4Q3JYV3RFTGpBCmJ4R3BtNk1RU2xweGE2bU9KdldN
-            Q0l0QTFKeFlpSUNoUEZuVHNwbVJMTDgKLS0tIEwrZThnd2MydmIxeTFBZ1ZoMjlK
-            TllCS1AyVFVsU01wVEt2aHhtQTNPSFUKX/a7k1AI/PJwFRQdLbcNBJX4vATvqSRC
-            AKx5jDTBn9oz714kGiLzmtO05ARl6L/MafwKZafclDtygLJnZgI8QA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3aytQOFRYajdQNVowQy9R
+            b1FLaGNhZHpPZFc0VDFpWlJnbk8vTnNwSXd3CjBITi9FaEJuOGFaZGNhOUh6V3k5
+            SFlYUHhnVStxbm0yY05iamp1eGxXY1kKLS0tIFhiTXM1TnpScEdBczJ1WmFGY3A0
+            REdLSitmNUpwcERkZ1JEbnkzeDBiOUEKh96+V8uRfHfYsJaWdh8mzp2h+g43ecle
+            2uqf4PXY+84DbzyGyVKeFCWkNgDb3aL3UZjvTePT6yFztF3TxF+gTg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-01T18:24:41Z"
-    mac: ENC[AES256_GCM,data:l7iwxidIruYMsAyZ4ZaJ/RITKWHUSAVJZKnVtK2r1AweIlLSI4iCQ/GsqytFgbEkckHfb2wM0z4QZTq/PJkBeQ4lE8+Hu4PtuRMBwK0+/bMrBfix/RHVHhmCm3eLuoFuasWG+c8acgFUjJ97gEcj89V7d3VSA0FM8gkcUyCirg4=,iv:9S12ugX/frNaVx1uY072oxFIz0a8WO1xVWs32box5zk=,tag:jsZfvCIgb6fIRkrGxxSqWw==,type:str]
+    lastmodified: "2025-01-01T18:31:43Z"
+    mac: ENC[AES256_GCM,data:/VJYgV0d+rEKVhZmJqL77CoioxKHNCRvhltOvlTsWrgO3/2YIiqFcFgwuCds/3iW6HCbQtVrFhkBvaVeoTY+RUGk7jvTgl1hpVmWGBnoIVK2KreemQv0q0kKf7mIRXg0s+rcWlm+j3AAnF4X8VinTnj4WJRP5KeaK7tmJ4W7kIg=,iv:cn4LPu5GSdih5i1Hm9Ymwkrl5cWvSN/caM2Wp58PlH0=,tag:+IpDgZ28KXXA05fsa8L/Xw==,type:str]
     pgp: []
     version: 3.9.1
