--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,43 +4,44 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:N9OSOxRCPipxa/IULupvBasB2imqaxUtv/QFdqkaElWVLF+hz5/pkVVMmvuGnrTPTqh8UHqgdpg1w5+LACL6dII=,iv:r8u9J60xGvWGSSs+ojxnYv5sWOXI4dGgPKsOjSP4/z0=,tag:guKKkjWAJm/Am+mqrGuzZA==,type:comment]
-    #ENC[AES256_GCM,data:h+Sh7yh5jMBPJZk3adp/j0AXL1Exs4wahSAvjduQvPAl6vdmASGg5byy47k=,iv:LgR3vpsQVsVEaN+wBF4aXg8mkz8J5TzVnkxAoql0KXQ=,tag:xtHxWBM8bzj0F8SdJR6GWw==,type:comment]
-    VIP: ENC[AES256_GCM,data://BWO/Hg5FMeeSmHMQ==,iv:s/F2sB4ZE+0ltWHTuZ7PSmKFkgtJ/uE1g8j12MsyHPs=,tag:+mQQIWBT8duOKbg7Bs9Kag==,type:str]
-    #ENC[AES256_GCM,data:9VhUoqdBWltO+R+8XSJAM07+wJHDFMTRNAfI,iv:FzjB6sXDx9QeWQODH6Y+Aie0J8WpVgw2iBNlJtihF1Y=,tag:W3+RCTgRi9ZEjCDofO6oxA==,type:comment]
-    #ENC[AES256_GCM,data:LjjlCaADJePzDpo5U1r9Ve6OtR5b+abp79zT2XQU1AKTI2mzZLOBJqepkY04kHJnRSWTW4T7ZKwt+2phAoKJmcfTiEhsBMTvgz9KP1kIIzscUQKMW35xhYY=,iv:jiL8ZicjOU8oYWrs4wUkOsyfQ/P/OiFE7rrJC0XNqiw=,tag:CA6AKjZG/LXVB3k6NprsCg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:8hlDBE/zNDOXijKFS2Y=,iv:o1EqoPw7glJ8lAmLs+UTzS7pbkmZEDfot0RK9Q45dEM=,tag:IKLvi/vkbgoNNkx97nrtMw==,type:str]
-    #ENC[AES256_GCM,data:I5fxETdgUfIp8Jibw1KwaKqJj/pqwuNvTyXSQ9mYpizlxg==,iv:KroZv2KatwdLmB8mMuEf2Cz0XJsejM2cGo8ggvmWn5k=,tag:z2WfYjKy/pnFQUD7TgIWZQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:aJ44CKydAD/3TsFdqQ==,iv:ua2hbY9AiiKe/NmwkJOWjWGFyhaFUkPoHtR+JFtmaKo=,tag:xHOk6jR1ccYeuXuuksJZPQ==,type:str]
-    #ENC[AES256_GCM,data:DZIbWg81yGeCaC0erTGEdp5Cyf2mLMRVZusqG1089X8LN2nw4nZlJ4KJ4Bo1Uu0=,iv:DuLCOv80gYi0OfUCJHZ6soLd47KpDNYKbmnA2VLmumQ=,tag:b8fKDHQKQdwS1MstUTrtoQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:YfxnRPtnBSH/kRrfWPxWNAyEw8ZxA81K9HoTTI8r2Q==,iv:pEOoNv8x486/e0r4lRVMje87v4riv1JrQTY/GHPa/pY=,tag:zIIPgRL1mckWbi21lN81Lg==,type:str]
-    #ENC[AES256_GCM,data:36RqoZB6xRoqQehaQhpnctlvTyrIPeBT93Nzen6wTqG+zuGHbwc6CBnFAd2Iy7qej8vlH0ZLXJwvD7vR0ux0j7sHvUZhoGzCMJXdGuLdfYldOA==,iv:AHKS9h1EOm/ob5nnT6PZ1sIISLMldUw+8vmavRMJWFU=,tag:/e8TNQUC1boBtuZmLmCMWQ==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:/5axwYLpAVoGS8l1n70i,iv:eAOLlKqcUqfZk3QVw9B6MeBbnYy0DQkas63VOyaC92E=,tag:YCg12sedRarZp329dDKVqA==,type:str]
-    #ENC[AES256_GCM,data:hy0fXRw2UaW9BtLrYihPVJtPyRdCPVFPV5edE8h4Xexi,iv:BrNGSapoAlpsl0c0HWGEXmy59CeBlbAYwkrFuKBfzfY=,tag:R6Ah3GkwvnlZzdfxoBCa/w==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:uXu7gfh7T8zlImvPR4f4,iv:zG++XasbEKhZ9KjpFNxliZEBBPV5znfc9ToG9Gx4x9s=,tag:R22X7w4yq/7iHhT+FKE7Sg==,type:str]
-    #ENC[AES256_GCM,data:WZyMyNTGZca4i+rERe8nZZ/z7m95e7iNYjchL7VK+xx7uEYPf/gPNVRyXCBQQ/ayFmjH8L2YMbhb1iuLNZ/Mw4pgRH1WFs0RXysXBKaTOD8=,iv:2MB09NcNiKTF5usclmH3zoPUEAAiMXPYfJRqbDuzsYk=,tag:87uFeBt60WF0+2L+NK+j1Q==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:V+6ppxmZW70rL2R63J+R,iv:2aG41VXHHjqijoMPDQrNW0BCr6bjADKvsZeCQMD6e7c=,tag:l123NuRcV9dTgDmxfEO1mg==,type:str]
-    #ENC[AES256_GCM,data:thCyNvWnRjOXLmkBr1SuQBxAEGXOgYAWfYexzdJsmB7H9XOYUZ4j/KEA0fgSGjDo/uBldSauniUQp1KE85adSatpIuSd0KVhUG5h4GAEX3hLbKjrlnpL,iv:4lfjj1+0dz4ygBXVMcKEaEeAbwg3klk7m3EEm5PSctc=,tag:DTmwn81U9/jphGnbAqPeMw==,type:comment]
-    #ENC[AES256_GCM,data:rUZMfWMTPV1gTAzrld6XAnchzsAoQFTSdd+XoOCvfT43MTJpLDwBQuBQDNp5nUZL7kh1bhKCvA8oYQKvox18c0Up4mWG+/v0crSAGK+kQyMyTwBgHtuwnW4N64SUPNuS3TxbjoF8VCKZ2aBpFBPyIjnUzvHqZ6kjZaFDwg==,iv:Uj68j9ic/0PE5bKrVlg+WuBDyTT91IilvNcyIsfJPIU=,tag:0nkewwEbwnESr1otd1+HEw==,type:comment]
-    #ENC[AES256_GCM,data:xSwwIOiTZ6rTduGkEUO8YELvNUAjjjJXDTK+CdyMCQrsFdNmrbCa0aiyIdxz0+IRkhs3hy0F3dA7R9XDZHWoxYAlUcvFvydUJpNu9dY3O28=,iv:wkECYAaAWqmPafsu6eHADPLJfX/ccoVK26TSfujgnPY=,tag:p5zz35hFAhuB72QfjPw5lg==,type:comment]
-    #ENC[AES256_GCM,data:Qz8KxdSlqvgC5kSCxxBxIje0kgZFZEI2afA4kCEXubhoAM9WvbZKufMZLlUeNDjP+Fv8RI6l,iv:wBcRhy/s6vb59atTR4Kl2dfo+NzjN2q8QoRNNUbNzB4=,tag:IzCWEBIVZG4nmesXlJoulg==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:3WMz793QIf9WDS/X9Rg=,iv:LTcTleLAkjBpNraUn7iDHd0cmdUBqYtDLMBd/Q8hW9M=,tag:aSqdE3iSZNYN6Dm6ME3c1A==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:WuVhYyoXobnGrkdv,iv:F0Tk6MJH/gqnT9fXPDH6vY2j3jVrg6pcgAk4xJIb01M=,tag:PaFixi5W8Cp2Y8VLd1brkg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:8xPGksg7D8+qaPpuucnXVkc=,iv:yu7oGSoov6xzZohEzDfgBX0Gnw1DwENuW/qpBRu1Mj0=,tag:T9ab6zgFwuHqTUebTkqHKQ==,type:str]
-    #ENC[AES256_GCM,data:BMgIKF2mNBH9E91dC7g6Q8Yp+b2VQVfbqiGlrPM41DVpM07YjJAbLw0OwwZllkJyF47AROlApTYerKRIkr6z63JAaA==,iv:il2NeMtt3kyGEP87pw65hUEIh4/TY8vwjz55y7dUPRY=,tag:m/k/x+BZkWpD6HeHBTDo8A==,type:comment]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:vSuz8OUIqNUOmQH7l3jDSKSLUx2tVKV8PAegJV6t0mbZ16Cd7A==,iv:PXB02XajIqbxwMDBWeCjTEkBhOYMaYKRfZYY7BL6/Y0=,tag:ktCt53L20aEIAaZjLhQVzw==,type:str]
-    #ENC[AES256_GCM,data:muMdoShwBNL0Wph7ogpb1ssRPGqWJsqVLN4gRepE9lPLx7qR7MtlA4pCRYJcKakbI0mRNzPvwa8=,iv:yYgl5/SSKjcjkH/YVAEiN5en5BrdjHd12YFXPL4mDb0=,tag:QR0mj2nAsOnvtiJmKvbisQ==,type:comment]
-    #ENC[AES256_GCM,data:QMeKkjucXDEsID2V/Tsms14Dod7UeZrfmQ==,iv:k/P0zHkOF5HZ8a4HkHyCVBOLvUTQK+cHc/R2cbe1+oY=,tag:GZsvov3BwrA7J5lIkGbmTQ==,type:comment]
-    #ENC[AES256_GCM,data:4wfIMFSEHtV6J9U+e1CtnMcVd66vdl68MdBYaPXUAhegm3Z7FPvjtshvc8MFj7AtyUOQ6PDR6YIfozspBr9hrt9RCZnq19kJIcZBWM4=,iv:5wmJNjwcDcyk1gq8Prp7KjWZwX007wnTvfyxyDQZ95Q=,tag:czERyNugJmzZ9iE8+we1Jw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:qhEf38z6A1t0KgLbjwoXnxSBsEOj/4F6pMuPY98C1WSv0kCN1UGSZX+RgskFiW69,iv:6fDFKDpuJVztqRAzpx1mNPnXxA32hHmpLVVi8qv1R1c=,tag:7+r2xoNdZyf+lvsORilHiw==,type:str]
-    #ENC[AES256_GCM,data:nemSx9bGVR0Aiz+pSrkMKX9qSms5cGBiZ7yRqoU/HGgpmZNMO6d/Zopw2ni8oOElfROi3qwiFbojS1bOF3Sksy/UJ8VA/ZU=,iv:9V/YiXAbsKBONBpt1CGdldz3gkXeqsUVJmIR3lo8Ml0=,tag:7LoUJ0cVXj1Bwb9/L8KYog==,type:comment]
-    #ENC[AES256_GCM,data:atT/mKtsdBHIA/4UFkVnff6/LN/j2gFmjODKeG8Mq5fy+Wme84YHL+hG/JFHWJnE9ZtzdZAz,iv:vXR4BtWZdNoeB7P7Q7QVdFXOgz7pwEe8Py6uyUWbz58=,tag:CviN8xqRSZ2xJulFFGsgJQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:FAvqwtkMKg==,iv:4QkU/Wm80NTaoPFTc5Dg8x1a1M4eyJOl6+rcAQs+kFk=,tag:9p+5mbpa0X3K72tKOtcHoA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1N9bY9yzTKRgrZdeX+CmtGXQkyA=,iv:4vN2otc+hSEJRA1VqK2osiVj6G60/HOU+OLTDpKt2aE=,tag:VacwJAcCUMyY46vWXspDIQ==,type:str]
-    #ENC[AES256_GCM,data:3svWp2yokwdWLj8Lxac=,iv:FGxZEdex3KVTB56RJfCrtCckTbHYMZEPZegBC75B6Kc=,tag:NJ0nxVuPeJPMfnmpVgMITw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:AhXeto8cxc36U8/C0w==,iv:3UNzNOKlczRNTX/MNHKMej5fEVPOY1a9HsJ9uepTS5Y=,tag:Sn5jee2FkJr10TtnlHgyzw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:x7VroNTrYxt4Iwc8BQ==,iv:dtS2AVvtTSTPwi1tSlCUmMAdo0DVl54BbpATF55E9so=,tag:LFDd3umoyHpBBjgrTtZ09Q==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:FQlKeQ==,iv:n4+jXD1sHS1hiL1aaWgV7k/Y3qRdBzx2HOf1t+BFQMg=,tag:JvS8Wm4fken0MGvfWH9d5g==,type:str]
+    #ENC[AES256_GCM,data:ffa4Ygcb7p9xPe3Oa29xp7fjpHihvqyxAOm0nqoslybWTtcRd8OMXvBZ8+L7QJxp9FVc3hQE/BkW8uGBfDa2R+c=,iv:VIsYCHvMMAEn1EWH9fOHljglmEyBtfAz5Si3Hmx1JO0=,tag:pPx40J3rSnGLXUMgOac6sA==,type:comment]
+    #ENC[AES256_GCM,data:zM8g8P3q5erEsXIm1UDbQzm6vU5v9vW0lbPMErpPEA9w6I04ZvIsCZ4cx4I=,iv:B9gEf9LZapehvrFostk/fXyG6uSGCGLjz7eo0NdnPNg=,tag:n8fZxMtjn8i74BCDRT3bqA==,type:comment]
+    VIP: ENC[AES256_GCM,data:usZk72WkCi+ChSCNuQ==,iv:KUR0WwQ1Jt0pJtLz9zKk2tX0eO25gKtDH7cr1Uq4lWY=,tag:LWqwCq2ZSCXLEsnwMoiBRw==,type:str]
+    #ENC[AES256_GCM,data:CC/7VqriMvrgTe/GfktOs3N9Xqt8jLRhNFY7,iv:/X3OW6yGRllq92nudDyrTtOiXv1ArKiGCu5z6SVl86U=,tag:+nH3PET+URI4s1dg9jjCdA==,type:comment]
+    #ENC[AES256_GCM,data:5hN9thX6vhpcaLA+XmS0GznWIqDrkZmv7JXHxWpgq1e2puG2uxR+Id48/RbyEGZaH9q5N6BVu2TBlWyeRRqkp+gEMg1dkauuv6H++HbGc63D/B5m1XDHRoQ=,iv:3VA7nJhUg7YNUN8SBkWN53bBPXwatdcnIQK5dAkQAmk=,tag:HKDKIctUmjHFi+dZmPfYCw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:Xm7aUfOZfyViai1KuQw=,iv:fDlj6r5pWL/0z2j6edFm152XXK6gNkyIto3y1ZjE2xs=,tag:783QFTPks+upAzhE6dTJew==,type:str]
+    #ENC[AES256_GCM,data:sR7f4/jGUqMEoRZGUkNuQRTuZMxkwtz2fJZjubZkWD+WJw==,iv:tf/hj5hZaz/oT0Z8wtVe9G0xv+S96qI9+5AjcwE0sQk=,tag:vcqPls53mJcQ+deelsGIvA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:ZPjO3OUZAAO0XgP8bQ==,iv:4PGoS8AtyDzZcZPqGP3WSMs7PpDR6+ZPHRQqXmSgK5g=,tag:p5PbCimSO709lSjHYbwjeQ==,type:str]
+    #ENC[AES256_GCM,data:43gQdEay4/hPMukvoJJmQiBpZ9W6lnz3Ckg+oOwyTru1yzjF3DQgFYKbWOmtDMY=,iv:zskHdPZ0x86tbpSs4/9utYU8R+9gj0QNw+pOzeRX+mY=,tag:2tofog6TCA7ePgeoVovO8Q==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:BstKxwr2DUKWDRe3gG1I4DTQ0K60LoITE7vySyjMKQ==,iv:Sz85hb/fNo6s/mBCCeEw64RCsTb/CCZW9Y/7g9sz47w=,tag:mEFoIA66Eh4ykEj8Cz4tGg==,type:str]
+    #ENC[AES256_GCM,data:idJgGyzCdrCUblbVANEIh9kwEqTpZhpBdVWZwwKn56JDjQlV7ANsV/4J+4Li1HODZ3YjrvY8PC0VPFB91BDFNDYoYDRQngPHiuXwGy1uduq7Hg==,iv:54w4oX1USM9+Z+FA9WspLWWC5lYviR+Q0iB/R5br70o=,tag:dKpoeXzO5roI8yJyKluTQA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:cXRb0O5reVaLPQFNU5bU,iv:wkvg/bO9xsBPA48v0lqi2YJ6qSEWjWEX4H1enM+lCCk=,tag:Wj3sbOQfV9VsnmCdQaCWbQ==,type:str]
+    #ENC[AES256_GCM,data:Ul+uYo0Ak4zPVQkD3fKTsBlhQDwBnh8KuukPmiN701di,iv:AyhO3dFRWoFR1akr46NDhPA+Xc0vY/BUjeoeUVozTP0=,tag:+GtXBMJovS6VHwn9gA5u2g==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:fz6ukVfXFRmezYTk85Hc,iv:R6Vovf1mLUBePiSZmdgHzT54rdCpAFWgqM20HAxbxbU=,tag:U1/CPMvNBhx9m0MnP0QO+Q==,type:str]
+    #ENC[AES256_GCM,data:z7dOaxtOcItUCjQZ84Fx8GvjNKCLG47oHWAQRrVfUhELGACOhx2gnpExKQZ/IIhU/RaBl0DeKAARhWsaHlkZ9HMhNQub3FAm/3B9iNLDLOU=,iv:Lhe8BIf0EoTmt8YqiHX1shWQOaH2Bd5Q5R1cw5l/9uo=,tag:Mcpk68+jipBycmKcJMPOuA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:bbty+RM/gUt2WQxh2jWO,iv:bzHNVsFN4N2/UsdjrzMI9ITESSUCyUgj3BCyDJ4UQis=,tag:Kze8FJq4VGrlRuljzPgZMQ==,type:str]
+    #ENC[AES256_GCM,data:OQ9DRJZ6SEn0DzZmL9eSaidSV9FX7CVUIn4v3HFXV6u57VxpqkRX6OzraT6sJGaJ9nn16KarE8edpBAPJLJuwd+NrELmu5d8jUiJ9r4DeQ5eag63SN3c,iv:Kd3DjcvzpScqSvJQYM27zuaXXTxlfNkGPOHvII8iYKI=,tag:+bW7qZZQz3H4FOvUM1jheQ==,type:comment]
+    #ENC[AES256_GCM,data:yDOo7v687Xj7Xp39uVqVEayx1v+m/xZSg7z3Hb35r8gG2Qq6PtTg5MaBpBz9xbDwOC8vBvajFG8TXltHzHz4xpQXc/d0eGeThPwOJbifDoce6SIA4pH2qrDKEnJ93s97Nj5/U44pZqGkv2+mZwDFUwYnURI5V7fcXqPoOg==,iv:cDlSOFAHGSc07BxySKaOvihflyuP4ZgR9Q5ERm12IvE=,tag:nkLvHcTcosCxlSirUyMRGw==,type:comment]
+    #ENC[AES256_GCM,data:gCFbdqyLVY7c9YsgQv2xO/lTM4mmDy4aFK/ym9NgH0NKpJl232/EsMmihfo3Q4PeCEVZncBPp5eQC2Yhyrp4VBHaLPizmZVrLuQWpkV26pU=,iv:rFLrdt+FS88o+60TRDkOVdEpRW7PRS+DDgkTdUjmqfY=,tag:VnhDNwnKbbHArVh9pBhCmw==,type:comment]
+    #ENC[AES256_GCM,data:EgEk8EgEfL/ia0YBbZAKEpttHOna7a9DdLgWUb5SzFes/VJZxaPtZsaoRoYV/lfwvrxj3VgB,iv:26/bQakmzX9HMG3QhSAb/vxXU72ocmOP1+GaqLdCKk8=,tag:7OfdmN99+82c15A5TSrJIA==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:YvBU5iNfx7pAP0EkXSY=,iv:c48Q6FGE/8/BN/QLkzf5h8BFPW4kW4RboE6CRolqFkI=,tag:P8bqezaeP/Pg5LdKm1zODw==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:stfCfm8Gm9Hh/buv,iv:JVyE/FnM18frPBMo7blleDWgcCHIjfTvIGASsgR8iYs=,tag:REzZXVwlaKTW5Khemh9ayg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:pOu/4RLASIpPiiPCtbLFU3g=,iv:F3OftVjK7ae/eu1BdHVUD4tglOrfumVIE2tg/iK9KLU=,tag:hDSHU95LH8m/oL2XKw1UTg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:piLjOzDIq43JaH5KjHdyPFDBF8ku5JJNACLSKYlh4sM=,iv:jtzG08q3d5qwmf0aexMJiFpJjClfFJVG6rookxX+Af0=,tag:zJIKq4juC/zdWOj50H9FDA==,type:str]
+    #ENC[AES256_GCM,data:6LlYXMpxU3BkfvJXiBk0KnBOj4Z1xu6wkijADxpuY42yySRyngO6KQMwpi6wH52n4aA7j69lguHNWkRhdl/Sbnej9g==,iv:c72iCMnXkNlOtcVU3dupa+4UF4E/y7QFfhDheX33t/U=,tag:nTarWpk+k/jTGPakeIBl8A==,type:comment]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:iaFVPPtdpO3dy4g4kXgqHOIxRiiZf8C0WG03V9I8iFIZFq4lgQ==,iv:yjaitDycQy38D6xJHZj0vBuLo2FES6rtOjIReUNAgt4=,tag:vW9Pb9Scliwe0Eptr2R8Cg==,type:str]
+    #ENC[AES256_GCM,data:vjIeXj3LhjIAPFWB5CM5mmGXjJRfBVsjWS5cyUwP93yFCEKrMTPmnk6A7oZoiclqlzSZUofozi4=,iv:m12niXzeiu7Xo7i9dRo1uyYE2cvfhz1vej6E2vW5OTA=,tag:O4+x1UFzP9wWosm2rGXCiQ==,type:comment]
+    #ENC[AES256_GCM,data:BNRwDKf6oP26xotjrPEdJYzZZIeYHnalRA==,iv:7ZcqcGBop1JG4VFzV+QUcR4EbVPPxgbWHAnxxZUcDj0=,tag:DN3aIquACR+8XD5fGB496Q==,type:comment]
+    #ENC[AES256_GCM,data:qPYWDWhqhBh5HrKmv1TMKXOZF0Ywbblh9ROw8V+G2mO6OX4RwxrYxdLz5Rq4grozFcyW+04ZSO8PzBztcqf4aWuSV8CT5llt/G8dbPE=,iv:XoGukHXMBmr738stj1WT6rm5js267wtGOfWimsIo9Bw=,tag:2r3kuENbFhyhIY/lshumvA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:cPW80rYTFeJBsMXaJv0uOPVfwP76hDQCdbgg+26LoQIog8/xsq5DLKmdwkHGYo/a,iv:3Zv+RmLbO9X0cM/Q+ilOANHvsugxYHGMkZH4WT3mSZg=,tag:AFE3LwG/kpuUh7Gb2bgQ9w==,type:str]
+    #ENC[AES256_GCM,data:rx4eOaio3Zw+qg2KQ365yw1PkVJAVTMoPYI2yp5wXpdT9JRlRPpOmbnm3HJYEmzJDqO7s5GLC3eUvNR8DE7r3BLLNG018nY=,iv:dbLG2wlXyUa/l9ZvfA00iJc4iOdqBwnRD3ttWdjXCH0=,tag:FLSP/fu2SG2tOLQvHlLYMQ==,type:comment]
+    #ENC[AES256_GCM,data:UHxkRzJv8uyIR+Q5FNC3T1/OVyOBE9LnW/HHp85Rg0NiGDCMKha/knCZipb9jAjp/ytLu3bt,iv:VVmLk5AGXrpnKDeO54fDGbqd166P5dsJVGCJ8nvzwus=,tag:CnR61mH6jX3t8iaD7FmAKw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:lIII4IU07g==,iv:oLGKyM9ALmC1kLB5Pr//PKh1QTImGnD64EPf/6JKmaY=,tag:3CfighvlR1yebnKNXPp02g==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Q13y8Bmbr7Stmgh1GhRSSnK71c8=,iv:h14ZDWVe3gREo0fI9PquHP3p2CDhxZtIkWE2t7zErgA=,tag:iAuBS7CQCuP8JxGHErK//A==,type:str]
+    #ENC[AES256_GCM,data:P9BUjHgxXy8gI0XIO/4=,iv:djTBLp9EoN87w+2VuCdeX3NOqVMY9Pc+GASqpIPq3ug=,tag:nYN88iirh/ubthhnljqCZA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:+GIdoEHaJY+yhGdvyg==,iv:VL4K168zXj8I3QwmWZts6/eae9QFJgSBOCkBXT9tN38=,tag:0U1OSqK43OUw0wUINS1sYw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:5lf3HoKLuj0AgzNFQg==,iv:nxTt6oh7CYDHDbQcuwso5EiOqgF6QtWaRxDaqGoBVx0=,tag:d9IXtAXCNSDHMl5PiHZ36w==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:lAkEiA==,iv:hQzO6xcVzT/x2+Freeh80KerdRXrDmvZw7y06twGPUY=,tag:8DreBkuA9E1zf1+aL/Q70w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -51,14 +52,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpVW1QcHRtb2U5clV5QVkz
-            NEgrQnJXNnlQTHZGNTkyTWVwdEFNZmU0RDI4CmYxYkk0KzhvU29MVEYzVGl0NGdT
-            MS9DSXhpS3lDVGFsVU5GK1hNM3ZRcUEKLS0tIHpBZERGa3pCTEs0b2tZYlhZMW1F
-            RjdJUDhadzdidlZVT09lOUZyNnJuZEkKpB11hcjZf6fzRWj6t44VfXAVovOC28KZ
-            4jo/xbwXqFZAi7Va08tGUmrscuCjcUv4jkYLGu33nPpFrKdNQzMgAQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3RzRla2x0dnNwemZlazgz
+            U2Z6bFlnekk0Y2E4S2ViRGgxUXBmUGx1L2tZCnoyMUg5TGdtM0dPOGhyMzBjSExm
+            b0YyejU4Nk43VDNwWnJtbmIxNERxRmMKLS0tIGplNzQ0cERiTDA0eGttS1c4MlBj
+            Z0xmeVNIL2pOMlc5bUhsZkNNNm9BY1EKE7lHVipomr1svI/GrtecmUbgfgwuhg6K
+            MhRFoNaQXgfEWXdyf1MH/rvqJKwQ8WT48g3Nl3T4JHRrtPz1YzWLvA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-01T18:24:41Z"
-    mac: ENC[AES256_GCM,data:/tlAFIbJYvUgFNtHylHUhqP9eEDGmjcx6NGE/D4+9K47Gq7XAnWnmsP1u7cdHRoyK1/OGf8ie9Sj3/uIaUvXf+z6rHQoVrRCF/XOtoXgPYr27e5IYV4sSAvY7khtBrnmxCJQp15hjflz2WfZhPxf/zlj0bx8kWxIBC1uB/pAOtY=,iv:TfvJgvjWyAxpeIXTc3r9aAumpjq4jJs2UIWOgRdB5Gw=,tag:uV8ZUXVY47O98yuW0INJdA==,type:str]
+    lastmodified: "2025-01-01T18:31:42Z"
+    mac: ENC[AES256_GCM,data:SJ3tmsuroX3bnruZtDHo49jCT7drI4OQvoXpo4T4ACAG1yFgFiL7J3P0t5o8RA4jgOWpNEwXaSNY+F/flsvOtBLiWjgdWJFuvHEN0VU/60Spy1WHCEoQFb3yeEsba5x+F4u2w4WB6EVA/yOUgBaWUftAUWyl8DDgvTdy4q7UUNg=,iv:cm03q067LCx/ipZbKp20rAHwQ75Qw289Y4Sbcute6SU=,tag:wZQ8dQZwGWEd5Q/kFc5Umw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
