--- a/clusters/main/kubernetes/apps/cloudflareddns/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/cloudflareddns/app/helm-release.yaml
@@ -37,6 +37,6 @@ spec:
       host_zone_record:
       - domain: ${DOMAIN_0}
         record: A
-        zone: ${DOMAIN_0}
+        zone: ${DOMAIN_0_ZONE}
       user: ${DOMAIN_0_EMAIL}
     
